--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 /* google fonts linked */
 @import url('https://fonts.googleapis.com/css2?family=Arima:wght@200;300&family=Dancing+Script&family=Lobster&family=Poppins:wght@400;500&family=Roboto&family=Rubik+Moonrocks&display=swap');
 
+.fixing-top{
+    position: relative;
+    top: 55px;
+}
+
 .img-brightness{
     filter: brightness(50%);
 }
